--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 [*]
 charset = utf-8
-end_of_line = crlf
+end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = false
@@ -72,18 +72,18 @@ ij_groovy_catch_on_new_line = false
 ij_groovy_class_annotation_wrap = split_into_lines
 ij_groovy_class_brace_style = end_of_line
 ij_groovy_class_count_to_use_import_on_demand = 5
-ij_groovy_do_while_brace_force = never
-ij_groovy_else_on_new_line = false
+ij_groovy_do_while_brace_force = always
+ij_groovy_else_on_new_line = true
 ij_groovy_enum_constants_wrap = off
 ij_groovy_extends_keyword_wrap = off
 ij_groovy_extends_list_wrap = off
 ij_groovy_field_annotation_wrap = split_into_lines
 ij_groovy_finally_on_new_line = false
-ij_groovy_for_brace_force = never
+ij_groovy_for_brace_force = always
 ij_groovy_for_statement_new_line_after_left_paren = false
 ij_groovy_for_statement_right_paren_on_new_line = false
 ij_groovy_for_statement_wrap = off
-ij_groovy_if_brace_force = never
+ij_groovy_if_brace_force = always
 ij_groovy_import_annotation_wrap = 2
 ij_groovy_imports_layout = *,|,javax.**,java.**,|,$*
 ij_groovy_indent_case_from_switch = true
@@ -204,8 +204,8 @@ ij_groovy_use_fq_class_names_in_javadoc = true
 ij_groovy_use_relative_indents = false
 ij_groovy_use_single_class_imports = true
 ij_groovy_variable_annotation_wrap = off
-ij_groovy_while_brace_force = never
-ij_groovy_while_on_new_line = false
+ij_groovy_while_brace_force = always
+ij_groovy_while_on_new_line = true
 ij_groovy_wrap_chain_calls_after_dot = false
 ij_groovy_wrap_long_lines = false
 
