--- a/packageManifest.json
+++ b/packageManifest.json
@@ -124,11 +124,11 @@
       "required": false
     },
     {
-      "id": "2bbff10b-0231-47d3-bb80-25d86d1a2317",
-      "name": "Ring Virtual Chime",
+      "id": "32b9f95d-1d97-4ae9-a59c-69bbb5d806a2",
+      "name": "Ring Virtual Alarm Flood & Freeze Sensor",
       "namespace": "ring-hubitat-codahq",
-      "location": "https://raw.githubusercontent.com/HubitatCommunity/hubitat_ring_integration/v0.4.0/src/drivers/ring-virtual-chime.groovy",
-      "betaLocation": "https://raw.githubusercontent.com/HubitatCommunity/hubitat_ring_integration/develop/src/drivers/ring-virtual-chime.groovy",
+      "location": "https://raw.githubusercontent.com/HubitatCommunity/hubitat_ring_integration/v0.4.0/src/drivers/ring-virtual-flood-freeze-sensor.groovy",
+      "betaLocation": "https://raw.githubusercontent.com/HubitatCommunity/hubitat_ring_integration/develop/src/drivers/ring-virtual-flood-freeze-sensor.groovy",
       "required": false
     },
     {
